# unity-xrsdk-depthTexture

./: .gitignore  README.md  UnityBugReport.md
Headers/XR/: IUnityXRStats.h  IUnityXRTrace.h
Samples/Plugins/Display/: CMakeLists.txt  compile.sh  run.sh  version.h  version.h.in
Samples/Plugins/Display/Source/: ExampleDisplayProvider.cpp  Main.cpp  RenderAPI.cpp  RenderAPI_OpenGLCoreES.cpp  TextureManager.cpp  string_name_define.cpp
Samples/Plugins/Display/include/: ExampleDisplayProvider.h  ProviderContext.h  RenderAPI.h  TextureManager.h  version.h
Samples/TestProjects/Display/: .gitignore
Samples/TestProjects/Display/Assets/: NoTextureArraySupport.cs  XREntry.cs  display.unity
Samples/TestProjects/Display/Assets/TestDepthTexture/: TestDepthTexture.unity
Samples/TestProjects/Display/Assets/TestDepthTexture/TestDepthTexture/: AutoRotate.cs  DebugRender.cs  UseRenderingPlugin.cs
Samples/TestProjects/Display/Assets/TestDepthTexture/TestDepthTexture/res/: PreviewDepth.shader  PreviewLastDepth.shader  boxitem.mat  previewDepth.mat  previewLastDepth.mat  skybox.mat
Samples/TestProjects/Display/Assets/XR/: XRGeneralSettings.asset
Samples/TestProjects/Display/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
